<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpOtp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.loginSignup.OtpActivity">



        <ImageView
            android:id="@+id/otp_image_view"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:contentDescription="@string/bg_img_desc"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_bg_img" />

        <TextView
            android:id="@+id/otp_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/otp_message_1"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/otp_image_view"
            app:layout_constraintTop_toTopOf="@id/otp_image_view" />

        <TextView
            android:id="@+id/otp_message_2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/otp_message_2"
            android:textAppearance="@style/Animation.Design.BottomSheetDialog"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/margin_15dp"
            app:layout_constraintStart_toStartOf="@id/otp_image_view"
            app:layout_constraintTop_toBottomOf="@+id/otp_message_tv" />

        <TextView
            android:id="@+id/otp_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/dp_10"

            android:text="@string/enter_phone_number"
            android:textAppearance="@style/Animation.Design.BottomSheetDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_image_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpOutlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:visibility="invisible"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/Animation.Design.BottomSheetDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_label"
            app:placeholderText="@string/otp_otp_ph"
            app:placeholderTextAppearance="@style/Animation.Design.BottomSheetDialog">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_otp_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="6"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/MobileNumberOutlinedTextField"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/Animation.Design.BottomSheetDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_label"
            app:placeholderText="@string/enter_phone_number"
            app:placeholderTextAppearance="@style/Animation.Design.BottomSheetDialog">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entered_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/otp_verify_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            android:layout_marginEnd="16dp"

            android:text="@string/otp_verify_error_text"
            android:textAppearance="@style/Animation.Design.BottomSheetDialog"
            android:textColor="?attr/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpOutlinedTextField" />

        <Button
            android:id="@+id/enteredMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_verify_error" />
        <Button
            android:id="@+id/otp_verify_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:paddingStart="32dp"
            android:visibility="gone"
            android:paddingEnd="32dp"
            android:text="@string/otp_verify_btn_text"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_verify_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>